--- a/src/app/therapy-layout/therapy-layout.component.html
+++ b/src/app/therapy-layout/therapy-layout.component.html
@@ -1,6 +1,6 @@
   
 <div class="therapy-view">
-  <h1>Therapy Layout - ({{ message }})</h1>
+  <h1>Therapy Layout</h1>
   <router-outlet></router-outlet>
 
   <div class="row justify-content-md-center">
