--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg fixed-top">
     <a class="navbar-brand" href="#">
-        <span class="fa fa-adjust fa-2x"></span><span style="font-size:40px;">{{ '   Bell Face' | translate }} </span>
+        <span class="fa fa-adjust fa-2x"></span><span style="font-size:40px;">{{ '   Miroir Facial' | translate }} </span>
     </a>
     <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <!-- <span class="navbar-toggler-icon"></span> -->
@@ -9,10 +9,11 @@
     <div class="collapse navbar-collapse">
 
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown" ngbDropdown>
+            <!--<li class="nav-item dropdown" ngbDropdown>
                 <a class="nav-link" href="javascript:void(0)" ngbDropdownToggle>
                     <i class="fa fa-envelope"></i> <b class="caret"></b><span class="sr-only">(current)</span>
                 </a>
+                
                 <ul class="dropdown-menu dropdown-menu-right messages">
                     <li class="media">
                         <img class="d-flex align-self-center mr-3"
@@ -47,7 +48,9 @@
                         </div>
                     </li>
                 </ul>
-            </li>
+           
+            </li> -->
+      <!--
             <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                     <i class="fa fa-bell"></i> <b class="caret"></b><span class="sr-only">(current)</span>
@@ -68,6 +71,7 @@
                     </a>
                 </ul>
             </li>
+        -->
             <li class="nav-item dropdown" ngbDropdown>
                 <a href="javascript:void(0)" class="nav-link" ngbDropdownToggle>
                     <i class="fa fa-language"></i> {{ 'Language' | translate }} <b class="caret"></b>
