--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,13 +1,17 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
     <ul class="list-group">
-        <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
+       <!-- <a routerLink="/dashboard" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
-        </a>
+        </a>-->
         <a [routerLink]="['/users']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-fw fa-user"></i>&nbsp;{{ 'Users' | translate }}
         </a>
 
         <div class="nested-menu">
+                <a [routerLink]="['/therapies']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                    <i class="fa fa-fw fa-edit"></i>&nbsp;{{ 'Therapy' | translate }}
+                </a>  
+                <!--
                 <a class="list-group-item" (click)="addExpandClass('therapy_pages')">
                     <span><i class="fa fa-fw fa-adjust"></i>&nbsp; {{ 'Therapy' | translate }}</span>
                 </a>
@@ -25,6 +29,7 @@
                         </li>
                     </ul>
                 </li>
+            -->
         </div>
 
         <a [routerLink]="['/exercises']" [routerLinkActive]="['router-link-active']" class="list-group-item">
@@ -34,7 +39,7 @@
 
 
 
-
+<!--
         <div class="nested-menu">
             <a class="list-group-item" (click)="addExpandClass('pages')">
                 <span><i class="fa fa-plus"></i>&nbsp; Coding Template</span>
@@ -74,5 +79,6 @@
                 </ul>
             </li>
         </div>
+    -->
     </ul>
 </nav>
