--- a/src/app/therapy-session/webfeed/webfeed.component.html
+++ b/src/app/therapy-session/webfeed/webfeed.component.html
@@ -1,7 +1,7 @@
 
-<video #hardwareVideo height="1080" width="1920"></video>
-<canvas #feed height="1080" width="1920"></canvas>
-<canvas #backbuffer height="1080" width="1920"></canvas>
+<video #hardwareVideo ></video>
+<canvas #feed ></canvas>
+<canvas #backbuffer></canvas>
 <!--<canvas #display2></canvas>-->
 
 
@@ -20,8 +20,3 @@
     top:0px; color:black;" height="100vh" width="100vw">
     </canvas>
 </div>
-
-
-
-
-
